--- a/Recipe.html
+++ b/Recipe.html
@@ -17,14 +17,16 @@
     <h1> Ricetta hummus veloce </h1>
 
     <p><strong><u>Questa</u> ricetta rende l'hummus veloce e gustoso, senza pasticci. È stato adattato da una serie di ricette
-        diverse che ho letto nel corso degli anni.</p>
+        diverse che ho letto nel corso degli anni.</p></strong>
 
     <p>L'hummus è una deliziosa pasta densa usata pesantemente nei piatti greci e mediorientali. È molto gustoso con
         insalata, carni alla griglia e pane pitta.</p>
 
-    <h2>Ingredienti</h2>
+    <code>
+    <q><h2>Ingredienti</h2></q>
 
     <p>
+
         <em>1 lattina (400g) di ceci (fagioli garbanzo)</em><br>
         <em>175g di tahini</em><br>
         <em>6 pomodori secchi</em><br>
@@ -33,9 +35,13 @@
         <em>1 spicchio d'aglio</em><br>
         <em>Un pizzico di olio d'oliva</em><br>
     </p>
+</code>
+
+    <big>testo Big</big>
+    <q>testo tra virgolette</q>
 
     <h2>Disposizioni</h2>
-
+<!--comment
     <p>
 
         Rimuovere la pelle dall'aglio e tritare grossolanamente<br>
@@ -45,7 +51,7 @@
         Se vuoi un hummus "grosso" grossolano, elaboralo per un breve periodo<br>
         Se vuoi un hummus liscio, elaboralo per un tempo più lungo<br>
     </p>
-
+-->
     <p>Per un sapore diverso, potresti provare a frullare in una piccola misura di limone e coriandolo, peperoncino,
         lime e chipotle, harissa e menta, o spinaci e formaggio feta. Sperimenta e vedi cosa funziona per te.</p>
 
@@ -54,7 +60,8 @@
     <p>Conservare in frigorifero l'hummus finito in un contenitore sigillato. Dovresti essere in grado di usarlo per
         circa una settimana dopo averlo fatto. Se inizia a diventare frizzante, dovresti assolutamente scartarlo.</p>
 
-    <p>L'hummus è adatto per il congelamento; dovresti scongelarlo e usarlo entro un paio di mesi.</p>
+    <p>
+        <blockquote>L'hummus è adatto per il congelamento</blockquote>, dovresti scongelarlo e usarlo entro un paio di mesi.</p>
 
 
 </corpo>
